# rag-demo

./: .gitignore  cn1.md  doc.md  main.ipynb  pyproject.toml  rag0.ipynb  rag1.ipynb  rag_langchain.ipynb  rag_manual.ipynb  rag_system.ipynb  rag_test.ipynb
notebooks/: rag_decompose.ipynb
