[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "google-genai>=1.61.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "langchain>=1.2.8",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
]
